// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errorMiddleware should resolve with default error data 1`] = `
Object {
  "error": Object {
    "code": null,
    "data": Object {},
    "details": null,
    "message": "message",
    "name": "APIError",
    "title": null,
  },
}
`;

exports[`errorMiddleware should resolve with error data 1`] = `
Object {
  "error": Object {
    "code": "errorCode",
    "data": Object {
      "json": "publicData",
    },
    "details": "details",
    "message": "message",
    "name": "APIError",
    "title": "title",
  },
}
`;
